addressing PR warning raised by the live team