@@ -23,6 +23,7 @@ lazy val microservice = Project("country-by-country-reporting", file("."))
     scalacOptions := scalacOptions.value.distinct
   )
   .settings(inConfig(Test)(testSettings): _*)
+  .settings(Test / javaOptions += "-XX:+EnableDynamicAgentLoading")
   .settings(resolvers += Resolver.mavenCentral)
   .settings(CodeCoverageSettings.settings: _*)
   .settings(
